logs/job_1267.err
  File "/home/ihubnvidia20/vqe4.py", line 86
    basis="sto3g",
    ^
SyntaxError: invalid syntax
